chore: fix OpenRewrite config and apply code style cleanup